2013-04-02  Dirk Schulze  <dschulze@adobe.com>
	Editorial changes in terminology section.

2013-03-13  Dirk Schulze  <dschulze@adobe.com>
	Incorporate feedback from fantasai.
	http://lists.w3.org/Archives/Public/www-style/2013Mar/0228.html

2013-03-12  Dirk Schulze  <dschulze@adobe.com>
	Add conformance section.

2013-03-11  Dirk Schulze  <dschulze@adobe.com>
	Incorporate feedback from Liam R E Quin.
	http://lists.w3.org/Archives/Public/www-style/2013Mar/0198.html

2013-03-10  Dirk Schulze  <dschulze@adobe.com>
	Incorporate feedback from Björn Höhrmann.
	http://lists.w3.org/Archives/Public/www-style/2013Mar/0190.html

2013-03-08  Dirk Schulze  <dschulze@adobe.com>
	Introduce unclipped masks for 'mask' element.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	Style changes.

2013-03-01  Dirk Schulze  <dschulze@adobe.com>
	More clarifications on definintion text.

2013-03-01 Brian Birtles <bbirtles@mozilla.com>
	Clarify the meaning of 'child' when used with the 'clip-path' property.
	Remove some overlapping definitions.

2013-02-19  Dirk Schulze  <dschulze@adobe.com>
	Rely on CSS Backgrounds and Border sepcification text as much as possible.

2013-01-17  Dirk Schulze  <dschulze@adobe.com>
	SVG WG resolved to use bounding client rect for percentage resolving.

2013-01-17  Dirk Schulze  <dschulze@adobe.com>
	Make SVGClipPathElement inherit from SVGElement and add 'transform' attribute to interface.

2013-01-15  Dirk Schulze  <dschulze@adobe.com>
	Remove implementing of SVGTest as discussed on SVG WG meeting of 01-10-2013.

2013-01-09 dschulze@adobe.com
	Remove defintions for SVGDefinitionElement.

2013-01-09 dschulze@adobe.com
	Add changes to 'mask' shorthand as clarified in CSS WG meeting today.

2013-01-09 dschulze@adobe.com
	Correct IDL defintion of SVGClipPathElement.

2013-01-08 dschulze@adobe.com
	Fixed syntax for 'mask-image' property.

2012-12-21 dschulze@adobe.com
	Fixed some typos and examples.

2012-12-21 dschulze@adobe.com
	Introduce source-type data type.