@@ -12,6 +12,19 @@
   <script defer=defer
     src="http://test.csswg.org/harness/annotate.js#CSS-MASKING_DEV"
     type="text/javascript"></script>
+  <style type="text/css">
+  /* Style elements like the specification SVG2 does. */
+  .element-name {
+    font-size: 90%;
+    font-weight: bold;
+    color: #A52A2A;
+  }
+
+  .element-name .property {
+    color: #A52A2A;
+  }
+
+  </style>
 </head>
 
 <div class="head">
