@@ -27,6 +27,19 @@
   <script defer=defer
    src="http://test.csswg.org/harness/annotate.js#CSS-MASKING_DEV"
    type="text/javascript"></script>
+  <style type="text/css">
+  /* Hopefully temporary styling differences between elements and properties. */
+  .element-name {
+    font-size: 90%;
+    font-weight: bold;
+    color: #A52A2A;
+  }
+
+  .element-name .property {
+    color: #A52A2A;
+  }
+
+  </style>
 
  <body>
   <div class=head> <!--begin-logo-->
