@@ -1,4 +1,7 @@
 2013-04-02  Dirk Schulze  <dschulze@adobe.com>
+	Style elements like in SVG2.
+
+2013-04-02  Dirk Schulze  <dschulze@adobe.com>
 	Editorial changes in terminology section.
 
 2013-03-13  Dirk Schulze  <dschulze@adobe.com>
